@@ -2,6 +2,7 @@ meegotouchhome (1.2.2~1) unstable; urgency=low
 
   * [UNRELEASED]
   * Fixes: NB#252550 - Package installation / Launcher error icon disappear and comes back
+  * Fixes: NB#264571 - Tapping launcher entry for failed installation as soon as it is indicated shows wrong exception
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 08 Sep 2011 12:59:42 +0300
 
